--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-numpy==1.21.4
-pickle-mixin==1.0.2
-streamlit==1.2.0
-streamlit-option-menu==0.3.2
-scikit-learn==1.0.1
+[quote="atsuyamaru0816, post:1, topic:87034"]
+streamlit==1.39.0
+openai==1.42.0
+tornado>=6.4.2
+[/quote]
+
